# wasm-nginx

./: .gitattributes  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  index.html  nginx.conf
src/: main.rs
web-assets/: Dockerfile  nginx.conf
